Fixes footer spacing.

--- a/src/app/shared-module/footer/footer.component.css
+++ b/src/app/shared-module/footer/footer.component.css
@@ -1,4 +1,5 @@
 footer {
+  padding-top: 10px;
   width: 100%;
   background-color: #ffffff;
   font-size: 13px;
@@ -33,6 +34,7 @@ footer {
   display: inline-block;
   margin: 0 0;
   padding: 7px;
+  padding-top: 0px;
 }
 
 .social-media {
